やつから貰ったランキングをとりあえず入れてエラーの無いようにした
残りやること ランキング・リザルト
・リザルト画面で勝敗表示
・やつの貰ったやつと、遷移先や描画先が違うからそこを直す

時間が余ったら、ランキングの見た目を変える

--- a/GameJam2025/GameJam2025.vcxproj.filters
+++ b/GameJam2025/GameJam2025.vcxproj.filters
@@ -45,7 +45,7 @@
     <ClCompile Include="Scene\RankingScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
-    <ClCompile Include="Scene\InputRankingScene.cpp">
+    <ClCompile Include="Scene\InputNameScene.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -83,7 +83,7 @@
     <ClInclude Include="Scene\RankingScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
-    <ClInclude Include="Scene\InputRankingScene.h">
+    <ClInclude Include="Scene\InputNameScene.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
